# ZTNA-dicovery

./: .env.example  .gitignore  .ruff.toml  Makefile  README.md  compose.test.yml  docker-compose.dev.yml  docker-compose.loadtest.yml  docker-compose.observe.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/src/api/: cursor.py  db.py  dependencies.py  logging_config.py  main.py  metrics.py  middleware_csrf.py  redis.py  settings.py  ws_fanout.py
api/src/api/auth/: jwks.py  jwt_verify.py  oidc.py  roles.py  router.py  session.py
api/src/api/routers/: adapters.py  applications.py  flows.py  groups.py  identity.py  saas.py  ws.py
api/src/api/schemas/: adapters.py  applications.py  flows.py  groups.py  identity.py  saas.py  sankey.py
api/src/api/services/: groups_service.py  identity_service.py
api/tests/: conftest.py  test_csrf.py  test_cursor.py  test_health.py  test_logging_config.py  test_metrics.py  test_mock_session_routes.py  test_settings.py  test_settings_file_overrides.py  test_ws_auth_and_cap.py  test_ws_fanout.py
api/tests/auth/: conftest.py  test_jwks.py  test_jwt_verify.py  test_require_role.py  test_roles.py  test_router.py  test_session.py  test_verify_endpoint.py
api/tests/auth/fixtures/: mock_token.py
api/tests/routers/: test_flows_filters.py  test_groups_router.py  test_identity_router.py
backup/: Dockerfile  backup-cron.sh  crontab
correlator/: Dockerfile  pyproject.toml  requirements.txt
correlator/src/correlator/: main.py  settings.py
correlator/src/correlator/pipeline/: app_resolver.py  enricher.py  group_aggregator.py  group_index.py  identity_index.py  metrics.py  sankey_publisher.py  windower.py  writer.py
correlator/tests/: test_app_resolver.py  test_metrics.py  test_sankey_publisher.py  test_windower.py  test_writer.py
correlator/tests/fixtures/identity/: events_basic.jsonl  events_expired_ttl.jsonl  events_mixed_confidence.jsonl
correlator/tests/pipeline/: test_enricher.py  test_group_aggregator.py  test_group_index.py  test_identity_index.py  test_sankey_publisher_with_lcd.py
docs/: adapters.md  (+3 more)
flow-ingest/: Dockerfile  pyproject.toml  requirements.txt
flow-ingest/src/flow_ingest/: main.py  metrics.py  publisher.py  settings.py  syslog_receiver.py
flow-ingest/src/flow_ingest/adapters/: base.py  fortigate_adapter.py  palo_alto_adapter.py
flow-ingest/tests/: test_adapter_base.py  test_fortigate_adapter.py  test_main_loader.py  test_metrics.py  test_palo_alto_adapter.py  test_publisher.py  test_settings.py  test_syslog_receiver.py
flow-ingest/tests/fixtures/fortigate/: traffic_close.kv  traffic_non_close.kv
flow-ingest/tests/fixtures/palo_alto/: traffic_end.csv  traffic_leef.txt  traffic_start.csv
id-ingest/: Dockerfile  pyproject.toml  requirements.txt
id-ingest/src/id_ingest/: main.py  metrics.py  redis_io.py  settings.py
id-ingest/src/id_ingest/adapters/: ad_4624_adapter.py  aruba_clearpass_adapter.py  cisco_ise_adapter.py  entra_signin_adapter.py
id-ingest/src/id_ingest/group_sync/: ad_sync.py  entra_sync.py  notifier.py  worker.py
id-ingest/tests/: test_main.py  test_metrics.py  test_settings_file_overrides.py
id-ingest/tests/adapters/: test_ad_4624_adapter.py  test_aruba_clearpass_adapter.py  test_cisco_ise_adapter.py  test_entra_signin_adapter.py
id-ingest/tests/fixtures/ad_4624/: malformed.txt  type10_remote.txt  type11_cached.txt  type2_interactive.txt  type3_network.txt
id-ingest/tests/fixtures/cisco_ise/: acct_start.txt  acct_stop.txt  session_timeout.txt
id-ingest/tests/fixtures/clearpass/: cef_start.txt  cef_stop.txt
id-ingest/tests/fixtures/entra/: corp_cidr_hit.json  corp_cidr_miss.json  delta_token.json  signins_page1.json  signins_page2.json
id-ingest/tests/fixtures/graph_groups/: transitive_member_of_page1.json  transitive_member_of_page2.json
id-ingest/tests/group_sync/: test_ad_sync.py  test_entra_sync.py  test_notifier.py  test_worker.py
(+126 files in other folders)
