[project]
name = "ztna-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "redis==5.1.0",
  "loguru==0.7.2",
]

[project.optional-dependencies]
test = ["pytest==8.3.3", "pytest-asyncio==0.24.0", "httpx==0.27.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
