[project]
name = "ztna-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "redis==5.1.0",
  "loguru==0.7.2",
  "websockets==13.1",
  "python-multipart==0.0.12",
  "authlib==1.7.0",
  "python-jose[cryptography]==3.3.0",
  "httpx==0.27.2",
  "itsdangerous==2.2.0",
  "prometheus-client==0.21.0",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "httpx==0.27.2",
  "fakeredis==2.25.1",
  "pytest-timeout==2.3.1",
  "respx==0.21.1",
  "freezegun==1.5.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
